# mav_trajectory_generation

./: .gitignore  CMakeLists.txt  package.xml  setup.py
include/mav_trajectory_generation/: motion_defines.h  polynomial_optimization_linear.h
mav_trajectory_generation/: CMakeLists.txt  package.xml  setup.py
mav_trajectory_generation/include/mav_trajectory_generation/: polynomial_optimization_nonlinear.h  polynomial_optimization_nonlinear_impl.h
mav_trajectory_generation/include/mav_trajectory_generation/impl/: polynomial_optimization_nonlinear_impl.h
mav_trajectory_generation/src/: polynomial.cpp  python.cpp
src/: motion_defines.cpp  python.cpp
src/rpoly/: rpoly_ak1.cpp
